--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,16 @@ environment:
 
 dependencies:
   bot_toast: ^4.0.3
+  cloud_firestore: ^3.4.5
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.6.4
+  firebase_core: ^1.21.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^1.0.4
   hive: ^2.2.3
+  stream_transform: ^2.0.0
+  google_sign_in: ^5.4.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
