--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  ar_flutter_plugin: ^0.7.1
   bot_toast: ^4.0.3
   cloud_firestore: ^3.4.5
   cupertino_icons: ^1.0.2
@@ -17,9 +18,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^1.0.4
-  hive: ^2.2.3
-  stream_transform: ^2.0.0
   google_sign_in: ^5.4.1
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -36,7 +38,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - Images/triangle.png
+    - Models/Chicken_01/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
